# Horaris-FIB

./: .gitignore  CMakeLists.txt  FIB_DATA.txt  Horari.cc  Horari.hh  Horaris-FIB.pro  HorarisParser.cc  HorarisParser.hh  LICENSE  Makefile  README.md  TODO  TODO.txt  bugs_ui.txt  combs.cc  extracombs.cc  get.py  input.inp  input.txt  input_completo.inp  input_example.txt  input_example_cat.txt  input_example_esp.inp  input_example_esp.txt  main.cc  output_example.txt  output_example_mixing.txt  result_example.out  result_example.txt
include/: App.hh  Horari.hh  MyComboBox.hh  Parser.hh
src/: App.cc  App.hh  Data.cc  Data.hh  HTTPSGetter.cc  HTTPSGetter.hh  Horari.cc  Horari.hh  HorarisParser.cc  MyComboBox.cc  Parser.cc  Parser.hh  main.cc
ui/: HorariWin.cc  HorariWin.h  HorariWin.ui  MyForm.cc  MyForm.h  MyForm.ui
